# llvm-comet2

./: .gitignore  COMET-II.md  NOTE_LLVM_BACKEND.md  README.md  llvm.patch
Comet2/: CMakeLists.txt  Comet2.h  Comet2.td  Comet2AsmPrinter.cpp  Comet2CallingConv.td  Comet2FrameLowering.cpp  Comet2FrameLowering.h  Comet2ISelDAGToDAG.cpp  Comet2ISelLowering.cpp  Comet2ISelLowering.h  Comet2InstrFormats.td  Comet2InstrInfo.cpp  Comet2InstrInfo.h  Comet2InstrInfo.td  Comet2MCInstLower.cpp  Comet2MachineFunctionInfo.h  Comet2RegisterInfo.cpp  Comet2RegisterInfo.h  Comet2RegisterInfo.td  Comet2Schedule.td  Comet2Subtarget.cpp  Comet2Subtarget.h  Comet2TargetMachine.cpp  Comet2TargetMachine.h  Comet2TargetObjectFile.cpp  Comet2TargetObjectFile.h  LLVMBuild.txt
Comet2/Disassembler/: CMakeLists.txt  Comet2Disassembler.cpp  LLVMBuild.txt
Comet2/MCTargetDesc/: CMakeLists.txt  Comet2AsmBackend.cpp  Comet2AsmBackend.h  Comet2ELFObjectWriter.cpp  Comet2ELFStreamer.cpp  Comet2ELFStreamer.h  Comet2FixupKinds.h  Comet2InstPrinter.cpp  Comet2InstPrinter.h  Comet2MCAsmInfo.cpp  Comet2MCAsmInfo.h  Comet2MCCodeEmitter.cpp  Comet2MCExpr.cpp  Comet2MCExpr.h  Comet2MCTargetDesc.cpp  Comet2MCTargetDesc.h  Comet2TargetStreamer.cpp  Comet2TargetStreamer.h  LLVMBuild.txt
Comet2/TargetInfo/: CMakeLists.txt  Comet2TargetInfo.cpp  Comet2TargetInfo.h  LLVMBuild.txt
patches/: LLVMBuild.txt.patch  comet2.patch  triple.patch
test/: README.md
tests/: Dockerfile  add.ll  add_alloc_alloc.ll  add_reg_alloc.ll  add_reg_const.ll  add_reg_ptr.ll  add_reg_reg.ll  arg16.ll  arg4.ll  arg8.ll  bit_op.ll  (+12 more)
(+18 files in other folders)
